basic react implementation with socket io

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>React Chat App</title>
+  <title>Flack</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<style>
+  /*
+    just to accomodate
+  */
+  body{ overflow-y: hidden; }
+  .label { font-size: 2rem; }
+  .chat-container {position: absolute; bottom: 20%; top: 25%; overflow-y: auto; }
+  .navbar-default { padding-bottom: 25px; }
+  .user-comment { display: inline-block; margin: 1.25rem; }
+</style>
 </head>
 <body>
   <div id="app"></div>
